[gd_scene load_steps=4 format=3 uid="uid://bxyh22da6o5gr"]

[ext_resource type="Texture2D" uid="uid://cbqb3xbmb3l53" path="res://Assets/Sprite/TitleScreenPixelated.png" id="1_rnxd2"]
[ext_resource type="Script" path="res://Scenes/start_button.gd" id="1_uifba"]

[sub_resource type="Theme" id="Theme_8is06"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_vertical_guides_ = [572.0]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(575.5, 324.5)
scale = Vector2(0.599479, 0.600926)
texture = ExtResource("1_rnxd2")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 453.0
offset_top = 344.0
offset_right = 694.0
offset_bottom = 407.0
theme = SubResource("Theme_8is06")
text = "Start"
script = ExtResource("1_uifba")

[node name="ExitButton" type="Button" parent="."]
offset_left = 453.0
offset_top = 442.0
offset_right = 694.0
offset_bottom = 505.0
theme = SubResource("Theme_8is06")
text = "Quit"
script = ExtResource("1_uifba")

[node name="Container" type="Container" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="StartButton" to="StartButton" method="_on_start_pressed"]
[connection signal="pressed" from="StartButton" to="StartButton" method="_on_pressed"]
[connection signal="pressed" from="ExitButton" to="StartButton" method="_on_exit_button_pressed"]
[connection signal="pressed" from="ExitButton" to="ExitButton" method="_on_pressed"]
